// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductItem Component matches the snapshot 1`] = `
<div>
  <div
    class="css-wi5mwl"
  >
    <li
      class="product-item css-1pj6k6r"
    >
      <div
        class="image-container css-0"
      >
        <img
          alt="Sample Product"
          class="chakra-image css-1nisw3u"
          loading="lazy"
          src="sample-image.jpg"
        />
      </div>
      <p
        class="chakra-text css-c8mxau"
      >
        Sample Product
      </p>
      <a
        class="chakra-link css-16n634d"
        href="/products/P01"
      >
        detail
      </a>
    </li>
  </div>
</div>
`;

exports[`ProductItem Component renders imageNotAvailable when product image is not available 1`] = `
<div>
  <div
    class="css-wi5mwl"
  >
    <li
      class="product-item css-1pj6k6r"
    >
      <div
        class="image-container css-0"
      >
        <img
          alt="Sample Product"
          class="chakra-image css-1nisw3u"
          loading="lazy"
          src="[object Object]"
        />
      </div>
      <p
        class="chakra-text css-c8mxau"
      >
        Sample Product
      </p>
      <a
        class="chakra-link css-16n634d"
        href="/products/P01"
      >
        detail
      </a>
    </li>
  </div>
  ,
</div>
`;
